single mws report

--- a/templates/mws-report.html
+++ b/templates/mws-report.html
@@ -436,7 +436,7 @@
 
         <section class="section">
             <h4>Water Balance</h4>
-            <p>A water balance study of the microwatershed indicates whether it is helping conserve water or deplete water from the underlying aquifer. Incoming water into a microwatershed is predominently through rainfall. Some of this is lost as runoff while the rest percolates into the ground. Crops pull some of this groundwater, and borewells for irrigation may pull groundwater from deeper aquifers too. A positive water balance indicates that less of the incoming water is lost, while a negative water balance indicates that the microwatershed takes away more water.</p>
+            <p>A water balance study of the microwatershed indicates whether it is helping conserve water or deplete water from the underlying aquifer. Incoming water into a microwatershed is predominantly through rainfall. Some of this is lost as runoff while the rest percolates into the ground. Crops pull some of this groundwater, and borewells for irrigation may pull groundwater from deeper aquifers too. A positive water balance indicates that less of the incoming water is lost, while a negative water balance indicates that the microwatershed takes away more water.</p>
 
             <p>{{wb_desc}}</p>
             <p>{{good_rainfall}}</p>
@@ -497,7 +497,7 @@
 
     <footer>
         <div class="container">
-            <p>Report generated on <span id="report-date"></span> | CoREStack Team</p>
+            <p>Report generated on <span id="report-date"></span> | CoRE Stack Team</p>
         </div>
     </footer>
 
