--- a/templates/mws-report.html
+++ b/templates/mws-report.html
@@ -443,6 +443,8 @@
             <p>{{wb_desc}}</p>
             <p>{{good_rainfall}}</p>
             <p>{{bad_rainfall}}</p>
+
+            <p>Do note that currently we only consider the vertical flux in the microwatershed. We are working on how to model incoming runoff into the microwatershed, as well as sub-surface flow from adjacent areas.</p>
             <div class="chart-container">
                 <canvas id="lineChart-water"></canvas>
             </div>
@@ -467,6 +469,7 @@
             </div>
         </section>
         
+        {% if villageNames %}
         <section class="section">
             <h2>Village Profile</h2>
             <p>There are <span id="vilage-count"></span> villages intersecting with this microwatershed:</p>
@@ -495,11 +498,16 @@
             </table>
 
         </section>
+        {% endif %}
     </div>
 
     <footer>
         <div class="container">
             <p>Report generated on <span id="report-date"></span> | CoRE Stack Team</p>
+            <p>
+                Do note that while the underlying datasets have been validated against ground‑truth in some locations, we need your feedback if the outputs shown here are in agreement with your observations about this area. Please do share your feedback with
+                <a href="mailto:contact@core-stack.org">contact@core-stack.org</a>.
+            </p>
         </div>
     </footer>
 
