Updated MWS Report Axes

--- a/templates/mws-report.html
+++ b/templates/mws-report.html
@@ -1181,7 +1181,7 @@
                         beginAtZero: true,
                         title : {
                             display: true,
-                            text: 'Value'
+                            text: 'Precipitation & Runoff(mm)'
                         }
                     },
                     x : {
@@ -1223,7 +1223,7 @@
                         beginAtZero: true,
                         title : {
                             display: true,
-                            text: 'Evapotranspiration'
+                            text: 'Evapotranspiration(mm)'
                         }
                     },
                     x : {
@@ -1265,7 +1265,7 @@
                         beginAtZero: true,
                         title : {
                             display: true,
-                            text: 'Groundwater'
+                            text: 'Groundwater(m)'
                         }
                     },
                     x : {
